forEnersys/DavePkg/objects/SBQQ__QuoteLineGroup__c.object
<CustomObject>
    <fields>
        <fullName>External_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Configuration</label>
        <referenceTo>External_Configuration__c</referenceTo>
        <relationshipLabel>Quote Line Groups</relationshipLabel>
        <relationshipName>Quote_Line_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Truck_Connector__c</fullName>
        <label>Truck Connector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_L_x_W_x_H__c</fullName>
        <label>Truck L x W x H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_Manufacturer__c</fullName>
        <label>Truck Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_Min_Weight__c</fullName>
        <label>Truck Min Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_Model_Class__c</fullName>
        <label>Truck Model / Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_Notes__c</fullName>
        <label>Truck Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_Type_Cover__c</fullName>
        <label>Truck Type / Cover</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_Volt_Term__c</fullName>
        <label>Truck Volt / Term.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>